complete mobil vue media query for top navigation bar .

--- a/index.html
+++ b/index.html
@@ -30,6 +30,31 @@
 
 
 
+   <mobile-header>
+
+    
+    
+    <nav class="mobile-navigator">
+      <ul>
+         <li><a href="#"><img src="resources/assets/images/ic-logo.svg"></a></li>
+        <li><a href="#"><img src="resources/assets/images/ic-on-campus.svg"></a></li>
+        <li><a href="#"><img src="resources/assets/images/ic-online.svg"></a></li>
+        <li><a href="#"><img src="resources/assets/images/ic-login.svg"></a></li>
+      </ul>
+    </nav>
+
+
+  </mobile-header>
+
+
+
+
+
+
+
+
+
+
 
 
 
