Complete project colmar and complete transitions and icon additions and color infusion - checked all code and now complete .

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
 
@@ -28,8 +29,6 @@
     </nav>
   </header>
 
-
-
    <mobile-header>
     <nav class="mobile-navigator">
       <ul>
@@ -42,12 +41,6 @@
   </mobile-header>
 
 
-
-
-
-
-
-
 <!-- --- --- Jumbotron - Value offer block / Portion 1 --- --- -->
 
   <div class="portion-jumbo">
@@ -56,7 +49,7 @@
       <img class="first-jumbo" src="resources/assets/images/banner.jpg" alt="students studying">
     </div>
     <div class="portion1-text">
-      <h1>Learn something new everyday</h1>
+      <h1>Learn <span class="coolyo">something new</span> everyday</h1>
       <p>Every day present a new  opportunity to becoming better</p>
       <a href="#" class="portion1-button">Start here</a>  
     </div> 
@@ -139,7 +132,6 @@
     </div>
 
 
-
     <!--  --- Portion 3 - min box 2/6  --- -->
 
 <div class="portion3-block">
@@ -161,7 +153,6 @@
         <p class="site-descripts">User Experience Design, User Research, Visual Design</p>
       </div>
     </div>
-
 
 
     <!--  --- Portion 3 - min box 4/6 --- -->
@@ -197,7 +188,6 @@
         <p class="site-descripts">Analytics, Content Marketing,<br> Mobile Marketing</p>
       </div>
     </div>
-
 
     </div>
 
@@ -247,12 +237,14 @@
 <!-- --- --- Footer - Copyright information --- --- -->
 
 <footer class="disclaimer">
-
   
     <p class="no-descripts">&copy; Colmar Academy.  All rights reserved</p>
     <div class="crazy">
-      <a class="site-descripts" href="#">terms</a>
-      <a class="site-descripts" href="#"> Privacy</a>
+
+      <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+      <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a class="site-descripts term" href="#">Terms</a>
+      <a class="site-descripts term" href="#"> Privacy</a>
     </div>
 </footer>
 
